<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pause_all"
        android:title="@string/pause_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_resume_all"
        android:title="@string/resume_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_retry_failed"
        android:title="@string/retry_failed"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_failed"
        android:title="@string/action_clear_failed"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_completed"
        android:title="@string/action_clear_completed"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
