<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/storage_download_folder"
        android:textAppearance="?attr/textAppearanceBodyMedium" />

    <EditText
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:minHeight="48dp"
        android:id="@+id/input_storage_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_input_tv"
        android:hint="@string/storage_text_folder_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/storage_hint_all_files"
        android:textAppearance="?attr/textAppearanceBodySmall"
        android:textColor="?android:attr/textColorSecondary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/storage_extra_folders"
        android:textAppearance="?attr/textAppearanceBodyMedium" />

    <LinearLayout
        android:id="@+id/extra_folders_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <Button
        android:id="@+id/btn_add_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_btn_tv"
        android:backgroundTint="@null"
        android:text="@string/storage_add_folder" />
</LinearLayout>
